--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         .dark .dropdown-menu, .dark .sub-menu { background-color: #1f2937; border-color: #4b5563; }
         .sub-menu { top: -0.25rem; left: 100%; }
         #sidebar-menu .rotate-90 { transform: rotate(90deg); }
+        #sidebar-menu { font-size: 13px; }
 
         @media (max-width: 639.98px) {
             body .p-4 {
@@ -218,8 +219,11 @@
                     return `
                         <div id="sidebar-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden" onclick="App.closeSidebar()"></div>
                         <nav id="sidebar-menu" class="fixed top-0 left-0 h-full w-64 bg-white dark:bg-gray-900 shadow-lg z-50 transform -translate-x-full transition-transform duration-300 ease-in-out flex flex-col">
-                            <div class="p-4 border-b dark:border-gray-700">
+                            <div class="flex justify-between items-center p-4 border-b dark:border-gray-700">
                                 <h2 class="font-bold text-lg">菜单</h2>
+                                <button onclick="App.closeSidebar()" class="text-gray-500 hover:text-gray-800 dark:text-gray-400 dark:hover:text-white">
+                                    <i class="fas fa-times text-xl"></i>
+                                </button>
                             </div>
                             <div class="flex-grow p-2 space-y-1 overflow-y-auto">
                                 ${navItemsHtml}
