--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         </div>
                     </header>`;
                 },
+
                 mobileSidebar: () => {
                     const navItemsHtml = App.templates.mobileSidebarMenuItems(App.state.navItems);
                     const themeIcon = App.state.theme === 'light' ? `<i class="fal fa-moon fa-fw"></i> <span>切换深色模式</span>` : `<i class="fal fa-sun fa-fw"></i> <span>切换浅色模式</span>`;
@@ -283,13 +284,13 @@
                     <div id="search-modal" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center p-4" onclick="App.closeSearchModal()">
                         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-xl w-full max-w-2xl p-6 relative" onclick="event.stopPropagation()">
                             <button onclick="App.closeSearchModal()" class="absolute top-3 right-4 text-gray-500 hover:text-gray-800 dark:text-gray-400 dark:hover:text-white">
-                                <i class="fas fa-times text-2xl"></i>
+                                <i class="fas fa-times text-xl"></i>
                             </button>
-                            <h3 class="text-xl font-semibold mb-4">搜索文章</h3>
+                            <h3 class="text-lg font-semibold mb-4">搜索文章</h3>
                             <form onsubmit="App.handleSearchSubmit(event)">
                                 <div class="relative">
                                     <input type="search" name="query" placeholder="请输入关键词..." class="w-full pl-5 pr-12 py-3 border-2 dark:border-gray-600 rounded-lg dark:bg-gray-700 focus:outline-none focus:border-blue-500" autofocus>
-                                    <button type="submit" class="absolute right-2 top-1/2 -translate-y-1/2 bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md">
+                                    <button type="submit" class="absolute right-2 top-1/2 -translate-y-1/2 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-md">
                                         <i class="fal fa-search"></i>
                                     </button>
                                 </div>
