--- a/tools.html
+++ b/tools.html
@@ -309,7 +309,7 @@
                                 </div>
                                 <button onclick="App.handleGenerateQRCode()" class="w-full bg-green-500 text-white font-bold py-2 rounded-md hover:bg-green-600">生成QR码</button>
                             </div>
-                            <div class="w-48 h-48 flex-shrink-0 border rounded-md flex items-center justify-center bg-white p-1">
+                            <div class="w-48 h-48 flex-shrink-0 border rounded-md flex items-center justify-center bg-gray-100 p-1">
                                 <div id="qr-code-output" class="w-full h-full flex items-center justify-center"></div>
                             </div>
                         </div>
